# tripiary-trip-planner-agent

./: .env.example  .gitignore  FINAL_ITINERARY.md  README.md  STREAMLIT_SETUP.md  main.py  pyproject.toml  streamlit_app.py
agents/: journey_info_extractor.py
prompts/: system_prompts.py
scrapers/: rail_info_scraper.py
utils/: data_extractor.py
