[project]
name = "trip-planner-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "serpapi>=1.0.2",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.8.5",
]
